tests/suite/fail/generated/borrow/fail_move_take_name.ny
fn take(x: string) -> void { print(x) }
fn main() {
    let name = "hello"
    take(name)
    print(name) //~ ERROR was moved
}
